crates/strider/tests/snapshots/v3__x64__floats__f32_arith.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nXMM1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="Or:u128", shape=box, fillcolor="#2d2d2d"];
  "7" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0xffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="ZeroExtend\nu32 → u128", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="Div:f32", shape=box, fillcolor="#1a3020"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:f32", shape=box, fillcolor="#1a3020"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "17" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x3f800000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "18" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="Add:f32", shape=box, fillcolor="#1a3020"];
  "20" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="Neg\nf32 → f32", shape=box, fillcolor="#1a3020"];
  "22" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "23" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "6" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="Mul:f32", shape=box, fillcolor="#1a3020"];
  "24" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:f32", shape=box, fillcolor="#1a3020"];
  "15" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "7" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "19" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xffffffffffffffffffffffff00000000:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="init\nRAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
